Lesson_020_28Aug2026/LessonFiles/HomeWork/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shop
  labels:
    # своя метка на ns — пригодится, если политики будут ссылаться на этот ns извне
    env: lesson020
