Lesson_020_28Aug2026/LessonFiles/HomeWork/k8s/10-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: shop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend           # <- на эту метку целятся и Service, и NetworkPolicy
    spec:
      containers:
        - name: http-echo
          image: hashicorp/http-echo:1.0.0
          args:
            - "-text=HELLO FROM BACKEND"
            - "-listen=:8080"
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests: { cpu: 10m, memory: 16Mi }
            limits:   { cpu: 100m, memory: 64Mi }
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: shop
spec:
  type: ClusterIP              # <- только внутри кластера, наружу не торчит
  selector:
    app: backend
  ports:
    - name: http
      port: 80                 # порт Service
      targetPort: 8080         # порт контейнера
      protocol: TCP
