Lesson_020_28Aug2026/LessonFiles/HomeWork/k8s/20-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shop-ingress
  namespace: shop
spec:
  ingressClassName: nginx
  rules:
    - host: shop.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend     # <- снаружи доступен ТОЛЬКО фронтенд.
                port:              #    правила для backend здесь нет намеренно.
                  number: 80
